--- a/Project Development Phase/Sprint_1/style.css
+++ b/Project Development Phase/Sprint_1/style.css
@@ -3,27 +3,28 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family: "Gill Sans Extrabold",sans-serif;
 }
 
 body {
-    width: 100%;
-    height: 100vh;
+    margin: 50px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    background: #f000dc;
+    justify-content: start;
+    background-image: url("https://media.istockphoto.com/id/1067822456/photo/carry-on-in-front-of-a-plane.jpg?s=612x612&w=0&k=20&c=KheFlX2sx1BVU6Ct2P-WmgOcsNGVF0AtDB4CIIC0-LI=");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
-
 ::selection {
     color: #fff;
     background: #53f0e3;
 }
 
 .wrapper {
-    width: 380px;
+    width: 300px;
     padding: 40px 30px 50px 30px;
-    background: #fff;
+    background: linear-gradient(rgba(224, 123, 64,.7),rgba(230, 86, 86, 0.7),rgb(90, 87, 87));
     border-radius: 5px;
     text-align: center;
     box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.1);
@@ -32,6 +33,7 @@ body {
 .wrapper header {
     font-size: 35px;
     font-weight: 600;
+ 
 }
 
 .wrapper form {
@@ -44,7 +46,7 @@ form .field {
 }
 
 form .field.shake {
-    animation: shake 0.3s ease-in-out;
+    animation: shake 0.2s ease-in-out;
 }
 
 @keyframes shake {
@@ -73,9 +75,9 @@ form input {
     height: 100%;
     outline: none;
     padding: 0 45px;
-    font-size: 18px;
+    font-size: 20px;
     background: none;
-    caret-color: #5372F0;
+    caret-color: #eb6122;
     border-radius: 5px;
     border: 1px solid #bfbfbf;
     border-bottom-width: 2px;
@@ -84,18 +86,18 @@ form input {
 
 form .field input:focus,
 form .field.valid input {
-    border-color: #5372F0;
+    border-color: #f06b53;
 }
 
 form .field.shake input,
 form .field.error input {
-    border-color: #dc3545;
+    border-color: #242121;
 }
 
 .field .input-area i {
     position: absolute;
     top: 50%;
-    font-size: 18px;
+    font-size: 20px;
     pointer-events: none;
     transform: translateY(-50%);
 }
@@ -108,12 +110,12 @@ form .field.error input {
 
 .input-area .error-icon {
     right: 15px;
-    color: #dc3545;
+    color: #d8b9bc;
 }
 
 form input:focus~.icon,
 form .field.valid .icon {
-    color: #5372F0;
+    color: #3d3e42;
 }
 
 form .field.shake input:focus~.icon,
@@ -123,11 +125,11 @@ form .field.error input:focus~.icon {
 
 form input::placeholder {
     color: #bfbfbf;
-    font-size: 17px;
+    font-size: 18px;
 }
 
 form .field .error-txt {
-    color: #dc3545;
+    color: #130608;
     text-align: left;
     margin-top: 5px;
 }
@@ -147,7 +149,7 @@ form .pass-txt {
 }
 
 .wrapper a {
-    color: #5372F0;
+    color: #110804;
     text-decoration: none;
 }
 
@@ -161,12 +163,12 @@ form input[type="submit"] {
     color: #fff;
     padding: 0;
     border: none;
-    background: #5372F0;
+    background: #d49278;
     cursor: pointer;
     border-bottom: 2px solid rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
 }
 
 form input[type="submit"]:hover {
-    background: #2c52ed;
+    background: #0d4c5f;
 }
